Hard-code the postits content in the 'title-slide.html' template and let the user decide if they are to be included as 'true' or 'false'

--- a/inst/quarto/assets/title-slide.html
+++ b/inst/quarto/assets/title-slide.html
@@ -55,11 +55,11 @@ $if(date-as-string)$
 $endif$
 
 $for(postit1)$
-<p><span class="postit1">$postit1$</span></p>
+<p><span class="postit1">Check out our departmental podcast “Random Talks” on Soundcloud! <a href="https://soundcloud.com/uclsound/sets/sample-space" style="color: #ff7700;" title="Listen to our podcast"><i class="fa-brands fa-soundcloud" aria-label="soundcloud"></i></a></span></p>
 $endfor$
 
 $for(postit2)$
-<p><span class="postit2">$postit2$</span></p>
+<p><span class="postit2">Follow our departmental social media accounts <a href="url=%22https://twitter.com/stats_ucl" style="color: #000000;" title="Follow us on X"><i class="fa-brands fa-x-twitter" aria-label="x-twitter"></i></a> <a href="https://www.linkedin.com/in/statistical-science-ucl-906b9a201" style="color: #0A66C2;" title="Follow us on LinkedIn"><i class="fa-brands fa-linkedin" aria-label="linkedin"></i></a> <a href="https://www.instagram.com/ucl.stats/" style="color: #8a3ab9;" title="Follow us on Instagram"><i class="fa-brands fa-instagram" aria-label="instagram"></i></a> + magazine <a href="https://sample-space.org/" style="color: #434252;" title="Read our online magazine">“Sample Space”</a></span></p>
 $endfor$
 
 <p><span class="logo-stats"></span></p>
