Rename fields for url links in the title page

--- a/inst/quarto/assets/title-slide.html
+++ b/inst/quarto/assets/title-slide.html
@@ -26,16 +26,16 @@ $if(orchid)$
 <p style="margin:0px; opacity:0.8;">$orchid$</p>
 $endif$
 
-$if(url1)$
-<p style="margin:0px; font-family: 'Ubuntu Mono'; font-size: .9em; opacity:0.8">$url1$</p>
+$if(url)$
+<p style="margin:0px; font-family: 'Ubuntu Mono'; font-size: .9em; opacity:0.8">$url$</p>
 $endif$
 
-$if(url2)$
-<p style="margin:0px; font-family: 'Ubuntu Mono'; font-size: .9em; opacity:0.8;">$url2$</p>
+$if(github)$
+<p style="margin:0px; font-family: 'Ubuntu Mono'; font-size: .9em; opacity:0.8;">$github$</p>
 $endif$
 
-$if(url3)$
-<p style="margin:0px; font-family: 'Ubuntu Mono'; font-size: .9em; opacity:0.8;">$url3$</p>
+$if(social)$
+<p style="margin:0px; font-family: 'Ubuntu Mono'; font-size: .9em; opacity:0.8;">$social$</p>
 $endif$
 
 <br>
