Little fiddling with margins in css and title-page

--- a/inst/quarto/assets/title-slide.html
+++ b/inst/quarto/assets/title-slide.html
@@ -8,10 +8,8 @@ $endif$
 <br>
 
 $for(author)$
-<p style="margin:0px; font-family: Ubuntu; font-size: 1.2em;" class="author">$author$</p>
+<p style="margin:0px 0px .8em 0px; font-family: Ubuntu; font-size: 1.2em;" class="author">$author$</p>
 $endfor$
-
-<br>
 
 $for(institute)$
 <p style="margin:0px; opacity:0.8;font-family: Ubuntu;">$institute$</p>
