--- a/inst/quarto/gb-slides.html
+++ b/inst/quarto/gb-slides.html
@@ -465,7 +465,7 @@
   <link href="gb-slides_files/libs/rstudio_leaflet-1.3.1/rstudio_leaflet.css" rel="stylesheet">
   <script src="gb-slides_files/libs/leaflet-binding-2.2.1/leaflet.js"></script>
   <script type="ojs-define">
-  {"contents":[{"name":"actors","value":{"x":[-0.3754,-0.1563,-0.8458,-0.861,1.2395,1.0752,-0.0341,-0.397,0.7086,0.2771,-0.4343,-1.3661,0.6082,-0.72,0.7369,1.011,-1.7396,0.9561,2.7116,0.1171,-0.1379,-1.7673,-0.1151,-0.2335,-0.176,-0.3265,-0.2395,0.4288,0.0356,0.4709,0.616,-0.7157,0.2223,-0.1513,-0.3276,-0.6273,-0.6951,1.4836,-1.2624,-1.5955,-0.8934,-0.8908,0.4212,0.0588,-0.5374,2.1854,0.2301,0.3594,0.1904,-0.4439,-1.0383,-0.6859,0.6901,0.0098,0.6317,0.5745,0.2351,-0.4078,-0.3188,0.4948,-0.6478,-2.4939,-0.3228,-1.2228,-0.6873,-1.2087,0.2173,-0.3738,-1.4867,-0.2616,-0.6444,0.4113,2.4179,0.8903,-1.6031,-0.3379,0.3906,0.4837,0.9282,-0.0328,2.3278,1.797,-0.5673,-1.0449,-1.9255,-0.576,-0.1544,0.3956,-1.127,0.4924,-1.0785,1.0544,-1.1391,0.8953,1.2406,-0.7732,0.0067,0.3939,-1.4917,-2.0392],"y":[0.6623,-0.3785,-1.3064,-0.9785,-0.2825,-1.595,-1.0047,-0.2409,-0.6343,-1.1432,-1.0844,-0.59,0.4327,-0.1788,0.5971,-0.7452,-0.6653,-0.2141,2.1328,0.0615,0.6609,1.2114,-1.1126,0.1732,-1.1973,-0.4467,-0.068,0.0733,-0.1242,-0.1962,0.5631,-0.6933,0.2327,-0.9356,-1.0971,-0.9611,1.2158,0.3051,0.5485,-0.1709,0.3686,0.5099,-0.9784,-0.8188,-0.5714,-1.3362,-0.4257,2.0098,-0.214,-1.0271,0.6973,-0.5125,-0.6786,-0.6217,1.7902,0.3166,0.6317,-0.6429,0.1601,0.7452,0.2779,-0.1225,1.255,0.3162,-0.6679,0.3698,-1.0388,-0.548,0.6072,-1.2762,-2.8739,-1.1026,0.3447,-0.1822,0.5264,0.9926,0.8221,1.2569,0.119,-1.0196,0.3243,-0.1669,1.0237,0.8286,0.7105,-0.9394,-0.0013,-0.2696,-0.3647,1.7774,1.3754,1.1722,-0.0925,-0.2362,-0.5738,-0.9191,1.2989,-1.002,0.6569,-1.3217]}}]}
+  {"contents":[{"name":"actors","value":{"x":[1.9466,-0.9076,-0.6984,-0.7043,0.479,0.0244,-0.3647,-0.1362,-0.9783,0.1491,1.3113,0.8136,0.0461,-1.2314,-1.711,0.639,-0.2994,-0.073,0.2038,-0.5836,-0.368,-1.6634,1.3718,-1.1882,-1.1941,1.2139,0.6495,0.8678,0.6039,-1.8302,-1.8618,-0.652,2.1893,-1.8186,-0.4802,2.1088,0.3363,1.3131,-0.6183,2.334,-1.8051,0.9471,0.0406,-0.2913,0.4281,-0.4436,0.2743,-0.8427,-0.2861,-1.3561,-0.5823,2.8439,1.8922,-0.2289,1.2078,-0.1796,0.7395,-0.2033,0.3883,-0.7172,1.0837,-0.3066,-0.0149,-0.0971,-1.4623,-2.0931,-0.9861,2.4986,-1.1097,0.2611,-1.0287,-1.219,0.7116,0.6421,-0.0474,-0.7104,0.5032,1.3038,0.1972,0.4189,-0.5264,1.1317,-0.1345,0.2236,-0.8569,0.8551,-0.0809,-0.7049,0.0966,-0.4187,0.3278,-0.7238,0.3659,-0.9451,-0.0755,-0.3184,0.5967,-0.3027,0.0572,0.0375],"y":[0.7557,-0.9729,-0.6278,0.5799,-1.0281,1.715,-0.7092,-0.3787,-0.7674,1.1699,-0.06,1.1117,-0.0032,-0.2041,1.1787,-0.7223,2.3421,-1.3809,-1.3307,-0.5293,-0.7607,0.05,0.6935,-0.6522,0.7748,0.4546,0.5577,-0.0709,-0.1792,1.1984,0.5139,0.6783,0.8694,1.0817,-0.3271,0.8128,0.3999,-1.5396,-1.2588,-0.5811,-1.3336,0.3044,-0.3943,-0.277,-0.6933,-0.0611,-1.2534,-0.8099,-1.4454,0.728,0.5597,-0.3332,0.2715,-0.4059,-2.0089,1.1286,-1.1223,1.2045,-0.3014,-0.3839,-1.1345,0.9458,0.1824,-0.1115,-0.9036,0.7384,-0.6992,0.3319,0.1529,0.3105,1.6196,-0.185,0.3077,-1.0662,-0.6255,-1.9036,-0.319,0.047,0.3422,0.5296,-0.2769,-0.6416,-0.407,1.3477,-0.7829,0.7637,-0.3078,-1.3563,0.9046,-0.1536,0.2889,-0.042,0.2033,-0.0162,-1.2355,-0.494,2.0482,-0.1884,0.8854,0.086]}}]}
   </script>
 </head>
 <body class="quarto-light">
@@ -478,9 +478,7 @@
 
 <br>
 
-<p style="margin:0px; font-family: Ubuntu; font-size: 1.2em;" class="author"><strong>Gianluca Baio</strong></p>
-
-<br>
+<p style="margin:0px 0px .8em 0px; font-family: Ubuntu; font-size: 1.2em;" class="author"><strong>Gianluca Baio</strong></p>
 
 <p style="margin:0px; opacity:0.8;font-family: Ubuntu;">Department of Statistical Science &nbsp; | &nbsp; University College London</p>
 <p style="margin:5px; font-family: 'Ubuntu Mono'; font-size: .9em; opacity:0.8;"><svg aria-hidden="true" role="img" viewbox="0 0 512 512" style="height:0.8em;width:0.8em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:#00acee;overflow:visible;position:relative;"><path d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48H48zM0 176V384c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V176L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z"></path></svg> <a href="mailto:g.baio@ucl.ac.uk">g.baio@ucl.ac.uk</a></p>
@@ -2008,8 +2006,8 @@ a_{21}&amp; =b_{21}&amp;
 <p>Include Jupyter widgets and htmlwidgets in your presentations</p>
 <div class="cell">
 <div class="cell-output-display">
-<div class="leaflet html-widget html-fill-item" id="htmlwidget-8a731ab8e70bd29f75b4" style="width:960px;height:480px;"></div>
-<script type="application/json" data-for="htmlwidget-8a731ab8e70bd29f75b4">{"x":{"options":{"crs":{"crsClass":"L.CRS.EPSG3857","code":null,"proj4def":null,"projectedBounds":null,"options":{}}},"calls":[{"method":"addTiles","args":["https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",null,null,{"minZoom":0,"maxZoom":18,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":1,"detectRetina":false,"attribution":"&copy; <a href=\"https://openstreetmap.org/copyright/\">OpenStreetMap<\/a>,  <a href=\"https://opendatacommons.org/licenses/odbl/\">ODbL<\/a>"}]},{"method":"addMarkers","args":[-36.852,174.768,null,null,null,{"interactive":true,"draggable":false,"keyboard":true,"title":"","alt":"","zIndexOffset":0,"opacity":1,"riseOnHover":false,"riseOffset":250},"The birthplace of R",null,null,null,null,{"interactive":false,"permanent":false,"direction":"auto","opacity":1,"offset":[0,0],"textsize":"10px","textOnly":false,"className":"","sticky":true},null]}],"limits":{"lat":[-36.852,-36.852],"lng":[174.768,174.768]}},"evals":[],"jsHooks":[]}</script>
+<div class="leaflet html-widget html-fill-item" id="htmlwidget-65369aaa125898fa1d24" style="width:960px;height:480px;"></div>
+<script type="application/json" data-for="htmlwidget-65369aaa125898fa1d24">{"x":{"options":{"crs":{"crsClass":"L.CRS.EPSG3857","code":null,"proj4def":null,"projectedBounds":null,"options":{}}},"calls":[{"method":"addTiles","args":["https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",null,null,{"minZoom":0,"maxZoom":18,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":1,"detectRetina":false,"attribution":"&copy; <a href=\"https://openstreetmap.org/copyright/\">OpenStreetMap<\/a>,  <a href=\"https://opendatacommons.org/licenses/odbl/\">ODbL<\/a>"}]},{"method":"addMarkers","args":[-36.852,174.768,null,null,null,{"interactive":true,"draggable":false,"keyboard":true,"title":"","alt":"","zIndexOffset":0,"opacity":1,"riseOnHover":false,"riseOffset":250},"The birthplace of R",null,null,null,null,{"interactive":false,"permanent":false,"direction":"auto","opacity":1,"offset":[0,0],"textsize":"10px","textOnly":false,"className":"","sticky":true},null]}],"limits":{"lat":[-36.852,-36.852],"lng":[174.768,174.768]}},"evals":[],"jsHooks":[]}</script>
 </div>
 </div>
 <div class="footer">
@@ -2187,12 +2185,19 @@ a_{21}&amp; =b_{21}&amp;
    - phoebe
    - reese
 -->
+<!-- this adds an empty slide with the "Thank you" gif selected in the yml of the talk -->
+</section></section>
+<section id="section" class="title-slide slide level1 center" data-background-image="images/phoebe.gif" data-background="#002248">
+<h1></h1>
+<div class="footer" style="background-color: transparent">
+
+</div>
 <div class="quarto-auto-generated-content">
 <div class="footer footer-default">
 <p>© Gianluca Baio (UCL) &nbsp; | &nbsp; <a href="https://twitter.com/giabaio" title="Follow me on X"><i class="fa-brands fa-x-twitter" aria-label="x-twitter"></i></a> &nbsp; <a href="https://mas.to/@gianlubaio" title="Follow me on Mastodon"><i class="fa-brands fa-mastodon" aria-label="mastodon"></i></a> &nbsp; <a href="https://github.com/giabaio" title="Check out my repos"><i class="fa-brands fa-github" aria-label="github"></i></a> &nbsp; <a href="mailto:g.baio@ucl.ac.uk" title="Email me"><i class="fa-solid fa-envelope" aria-label="envelope"></i></a> &nbsp; <a href="https://gianluca.statistica.it" title="Visit my website"><i class="fa-brands fa-firefox" aria-label="firefox"></i></a> &nbsp; | &nbsp; A short title &nbsp; | &nbsp; A shorter title of the conference &nbsp; | &nbsp; 12 Mar 2024</p>
 </div>
 </div>
-</section></section>
+</section>
     </div>
   </div>
 
@@ -2630,7 +2635,7 @@ a_{21}&amp; =b_{21}&amp;
       }
     });
     </script>
-    <script>var lightboxQuarto = GLightbox({"loop":false,"descPosition":"bottom","selector":".lightbox","closeEffect":"zoom","openEffect":"zoom"});
+    <script>var lightboxQuarto = GLightbox({"closeEffect":"zoom","descPosition":"bottom","selector":".lightbox","loop":false,"openEffect":"zoom"});
     window.onload = () => {
       lightboxQuarto.on('slide_before_load', (data) => {
         const { slideIndex, slideNode, slideConfig, player, trigger } = data;
