--- a/inst/quarto/assets/title-slide.html
+++ b/inst/quarto/assets/title-slide.html
@@ -12,7 +12,7 @@ $for(author)$
 $endfor$
 
 $for(institute)$
-<p style="margin:0px; opacity:0.8;font-family: Ubuntu;">$institute$</p>
+<p style="margin:0px; opacity:0.8;font-family: Ubuntu;">$institute.uni$</p>
 $endfor$
 $for(email)$
 <p style="margin:5px; font-family: 'Ubuntu Mono'; font-size: .9em; opacity:0.8;">$email.icon$ $email.text$</p>
@@ -28,7 +28,7 @@ $for(url)$
 <p style="margin:0px; font-family: 'Ubuntu Mono'; font-size: .9em; opacity:0.8">$url.icon$ $url.text$</p>
 $endfor$
 
-<p style="margin:0px; font-family: 'Ubuntu Mono'; font-size: .9em; opacity:0.8;">$for(github)$$github.icon$ $github.text$ &nbsp; $endfor$</p>
+<p style="margin:0px 5px 0px 15px; font-family: 'Ubuntu Mono'; font-size: .9em; opacity:0.8;">$for(github)$$github.icon$ $github.text$ &nbsp; $endfor$</p>
 
 <p style="margin:0px; font-family: 'Ubuntu Mono'; font-size: .9em; opacity:0.8;">$for(social)$$social.icon$ $social.text$ &nbsp; &nbsp;$endfor$</p>
 
