Update scss for quarto to have bullet points instead of squares, for ul

--- a/inst/quarto/assets/title-slide.html
+++ b/inst/quarto/assets/title-slide.html
@@ -25,12 +25,12 @@ $if(orchid.show)$
 $endif$
 
 $for(url)$
-<p style="margin:0px 15px 0px 15px; font-family: 'Ubuntu Mono'; font-size: .9em; opacity:0.8">$url.icon$ $url.text$</p>
+<p style="margin:0px 15px 0px 15px; font-family: 'Ubuntu Mono'; font-size: .9em; opacity:0.8">$url.icon$&nbsp;$url.text$</p>
 $endfor$
 
-<p style="margin:0px 15px 0px 15px; font-family: 'Ubuntu Mono'; font-size: .9em; opacity:0.8;">$for(github)$$github.icon$ $github.text$ &nbsp; $endfor$</p>
+<p style="margin:0px 15px 0px 15px; font-family: 'Ubuntu Mono'; font-size: .9em; opacity:0.8;">$for(github)$$github.icon$&nbsp;$github.text$ &nbsp;$endfor$</p>
 
-<p style="margin:0px 15px 0px 15px; font-family: 'Ubuntu Mono'; font-size: .9em; opacity:0.8;">$for(social)$$social.icon$ $social.text$ &nbsp; &nbsp;$endfor$</p>
+<p style="margin:0px 15px 0px 15px; font-family: 'Ubuntu Mono'; font-size: .9em; opacity:0.8;">$for(social)$$social.icon$&nbsp;$social.text$ &nbsp; &nbsp;$endfor$</p>
 
 <br>
 $if(conference.session)$
