Update title-page with a couple tweaks on fonts and appearance (including slides-url) + README file

--- a/inst/quarto/assets/title-slide.html
+++ b/inst/quarto/assets/title-slide.html
@@ -12,7 +12,7 @@ $for(author)$
 $endfor$
 
 $for(institute)$
-<p style="margin:0px; opacity:0.8;font-family: Ubuntu;">$institute.uni$</p>
+<p style="margin:0px; opacity:0.8;font-family: Inter Tight;">$institute.uni$</p>
 $endfor$
 $for(email)$
 <p style="margin:5px; font-family: 'Ubuntu Mono'; font-size: .9em; opacity:0.8;">$email.icon$ $email.text$</p>
@@ -25,28 +25,27 @@ $if(orchid.show)$
 $endif$
 
 $for(url)$
-<p style="margin:0px 15px 0px 15px; font-family: 'Ubuntu Mono'; font-size: .9em; opacity:0.8">$url.icon$&nbsp;$url.text$</p>
+<p style="margin:0px 15px 0px 15px; font-family: 'Ubuntu Mono'; font-size: .9em; opacity:0.8">$url.icon$ $url.text$</p>
 $endfor$
 
-<p style="margin:0px 15px 0px 15px; font-family: 'Ubuntu Mono'; font-size: .9em; opacity:0.8;">$for(github)$$github.icon$&nbsp;$github.text$ &nbsp;$endfor$</p>
+<p style="margin:0px 15px 0px 15px; font-family: 'Ubuntu Mono'; font-size: .9em; opacity:0.8;">$for(github)$$github.icon$ $github.text$ &nbsp; $endfor$</p>
 
-<p style="margin:0px 15px 0px 15px; font-family: 'Ubuntu Mono'; font-size: .9em; opacity:0.8;">$for(social)$$social.icon$&nbsp;$social.text$ &nbsp; &nbsp;$endfor$</p>
+<p style="margin:0px 15px 0px 15px; font-family: 'Ubuntu Mono'; font-size: .9em; opacity:0.8;">$for(social)$$social.icon$ $social.text$ &nbsp; &nbsp;$endfor$</p>
 
 <br>
 $if(conference.session)$
-<p style="margin:0px; opacity:0.8">$conference.session$</p>
+<p style="margin:0px; opacity:0.8; font-family: Inter Tight; font-size: 0.95em;">$conference.session$</p>
 $endif$
-$if(conference.title)$
+$if(conference.name)$
   $if(conference.location)$
-     <p style="margin:0px; opacity:0.8">$conference.title$, $conference.location$</p>
+     <p style="margin:0px; opacity:0.8; font-family: Inter Tight; font-size: 0.95em;">$conference.name$, $conference.location$</p>
   $else$
-     <p style="margin:0px; opacity:0.8">$conference.title$</p>
+     <p style="margin:0px; opacity:0.8; font-family: Inter Tight; font-size: 0.95em;">$conference.name$</p>
   $endif$
 $endif$
 
-$if(date-as-string)$
-<p style="margin-top:10px">$date-as-string$</p>
-$endif$
+<p style="margin-top:10px; font-family: Inter Tight; font-size: 0.9em;">$date-as-string$</p>
+
 
 $if(postit.random-talks)$
 <p><span class="postit1">Check out our departmental podcast “Random Talks” on Soundcloud! <a href="https://soundcloud.com/uclsound/sets/sample-space" style="color: #ff7700;" title="Listen to our podcast"><i class="fa-brands fa-soundcloud" aria-label="soundcloud"></i></a></span></p>
