--- a/inst/quarto/gb-slides.html
+++ b/inst/quarto/gb-slides.html
@@ -455,7 +455,7 @@
   </script>
   <script type="module" src="gb-slides_files/libs/quarto-ojs/quarto-ojs-runtime.js"></script>
   <link href="gb-slides_files/libs/quarto-ojs/quarto-ojs.css" rel="stylesheet">
-  <link href="gb-slides_files/libs/htmltools-fill-0.5.8/fill.css" rel="stylesheet">
+  <link href="gb-slides_files/libs/htmltools-fill-0.5.8.9000/fill.css" rel="stylesheet">
   <script src="gb-slides_files/libs/htmlwidgets-1.6.4/htmlwidgets.js"></script>
   <script src="gb-slides_files/libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
   <link href="gb-slides_files/libs/leaflet-1.3.1/leaflet.css" rel="stylesheet">
@@ -464,9 +464,9 @@
   <script src="gb-slides_files/libs/proj4-2.6.2/proj4.min.js"></script>
   <script src="gb-slides_files/libs/Proj4Leaflet-1.0.1/proj4leaflet.js"></script>
   <link href="gb-slides_files/libs/rstudio_leaflet-1.3.1/rstudio_leaflet.css" rel="stylesheet">
-  <script src="gb-slides_files/libs/leaflet-binding-2.2.1/leaflet.js"></script>
+  <script src="gb-slides_files/libs/leaflet-binding-2.2.2/leaflet.js"></script>
   <script type="ojs-define">
-  {"contents":[{"name":"actors","value":{"x":[0.006,-0.1621,0.3987,1.4944,-1.5145,-0.102,0.5825,-0.828,-1.1243,-0.394,-0.5102,-0.1582,-1.4151,0.7855,-0.5503,-1.5794,-0.4971,-0.4313,1.6463,0.0276,1.4136,-1.4738,-0.8065,-2.2816,1.256,0.778,1.2805,-0.6795,-0.8397,0.6839,-1.0915,-0.3509,-0.2677,-0.1366,-0.9644,0.8216,-0.0423,-0.5937,0.1076,-0.2814,-0.0968,0.3438,0.6231,0.2988,1.7479,0.2399,0.4208,1.3547,1.8913,1.3082,0.721,0.5654,0.1426,0.1303,-0.096,1.9554,-0.457,-0.2761,-1.1854,-1.5148,1.4865,-0.3637,-1.808,-0.0762,-0.0881,-0.2052,-0.5237,-0.3965,1.0065,1.1773,0.9514,0.1144,-0.4201,-0.0802,0.7901,-0.5246,-1.0368,-0.7673,0.0693,1.4217,0.8098,0.2927,0.1251,0.0665,-0.0101,0.9743,-1.3229,0.0444,1.4411,-0.6602,0.006,-0.1792,-0.9208,0.3093,-1.6145,0.3217,-0.5349,1.6646,-2.2735,-0.5646],"y":[-0.6043,-0.31,0.3115,0.6642,-0.9354,0.4098,-0.2439,1.8027,-0.2725,0.4227,-0.7871,0.401,-0.6626,0.4014,0.3096,-1.1334,0.1582,-0.2953,0.4975,1.6298,-2.0836,-0.2571,0.2027,-0.1788,-0.0497,-0.0094,1.7725,-1.5083,0.3836,0.1669,0.8787,-0.9954,1.2521,1.2242,-2.2734,-0.5195,0.5154,-0.9251,-0.4634,-0.5289,1.0717,-1.259,-0.9854,1.5528,0.8269,-0.1493,-0.1112,0.9846,0.5218,-0.4047,0.6025,-0.9712,-1.2266,-0.0151,-1.1914,-0.8309,-0.5505,-0.4025,0.5218,0.0976,-1.5869,-0.1438,0.6714,0.3058,0.6316,0.6275,-0.0958,0.5107,-0.5147,1.218,-1.23,-0.2539,0.0004,0.2037,0.2171,-0.2926,0.6034,0.4058,-0.0958,1.5298,0.0648,0.7257,1.3362,1.7079,-1.7318,1.089,-0.3882,-1.3613,0.6938,1.178,-0.7103,-1.1285,0.1277,0.5023,-0.8679,0.2418,0.3096,-0.1713,0.9329,0.8459]}}]}
+  {"contents":[{"name":"actors","value":{"x":[-0.6995,-0.2391,-1.1939,-0.4305,-2.4787,-2.2546,-0.0003,-1.9651,-1.3584,0.517,-0.7332,1.4011,-0.9359,-0.526,0.6953,0.2343,0.335,-0.3368,0.0372,0.7863,0.9713,-1.8973,-1.3914,0.7023,1.1073,0.8614,0.8169,0.9455,-0.2116,1.8985,-1.2,-1.0258,-0.0236,0.2285,0.9457,0.1783,0.7257,-0.6849,0.1933,0.3044,0.2473,0.4406,-0.6565,-0.6106,1.4343,-1.7303,1.5056,-0.2659,0.3608,-2.6123,-0.6214,0.9771,-0.3321,-0.7282,-0.5178,1.3935,-0.7027,-1.3907,0.0465,1.7549,0.3798,0.7763,0.9504,0.5222,1.0309,0.0569,0.6152,-0.573,-0.2683,0.4641,0.8128,-0.9058,1.5765,-0.554,-0.7121,-0.8706,0.7706,-0.4157,0.871,-0.0163,1.6994,0.1572,0.944,0.5017,0.0623,-1.4519,-0.7584,-0.2816,1.8081,-3.0387,-0.7862,0.1404,-1.0043,-0.6699,1.1093,0.9248,0.6445,0.3957,0.6952,-1.0776],"y":[-0.6766,-1.4381,1.1232,0.2697,-0.209,0.9651,-0.7164,1.5419,0.0281,-1.0133,0.4226,-2.045,-0.7653,0.8126,-2.3316,0.5658,-0.7916,0.3357,0.7692,0.5612,-0.195,2.5813,-0.3247,0.0219,0.3558,-1.0463,-2.6918,0.6596,-0.686,-0.2142,-0.8708,-0.0285,0.8777,-1.6366,-0.4841,1.8675,1.2301,0.1837,1.1822,-0.6726,0.9739,0.3806,0.1,-2.2708,-0.3395,0.6982,1.4218,0.5502,-1.6234,-0.1474,0.2137,-0.6496,-0.421,-0.5072,1.1319,1.3279,0.567,-0.3152,0.9414,-0.0327,-0.8531,-1.0211,0.1128,0.6793,-0.7038,0.7728,-0.5401,-2.0101,1.3074,1.1794,-0.6077,-0.459,0.203,1.1095,0.4435,-1.5038,-1.4042,-0.444,-0.8202,0.4698,-0.2349,-1.6518,-0.0343,-0.4649,0.4368,-0.6442,-0.5691,-0.1769,-0.6321,-0.2756,2.2444,0.4493,0.8754,-0.8616,-0.9727,-0.2686,1.1564,-0.535,0.3419,1.244]}}]}
   </script>
 </head>
 <body class="quarto-light">
@@ -498,7 +498,7 @@
 <p style="margin:0px; opacity:0.8; font-family: Inter Tight; font-size: 0.95em;">The name of the session</p>
        <p style="margin:0px; opacity:0.8; font-family: Inter Tight; font-size: 0.95em;">The name of the conference, Where it is</p>
   
-<p style="margin-top:10px; font-family: Inter Tight; font-size: 0.9em;">26 March 2024</p>
+<p style="margin-top:10px; font-family: Inter Tight; font-size: 0.9em;">27 March 2024</p>
 
 
 <p><span class="postit1">Check out our departmental podcast “Random Talks” on Soundcloud! <a href="https://soundcloud.com/uclsound/sets/sample-space" style="color: #ff7700;" title="Listen to our podcast"><i class="fa-brands fa-soundcloud" aria-label="soundcloud"></i></a></span></p>
@@ -2030,8 +2030,8 @@ a_{21}&amp; =b_{21}&amp;
 <p>Include Jupyter widgets and htmlwidgets in your presentations</p>
 <div class="cell">
 <div class="cell-output-display">
-<div class="leaflet html-widget html-fill-item" id="htmlwidget-9c0e83c3a93fb6e7a0ef" style="width:960px;height:480px;"></div>
-<script type="application/json" data-for="htmlwidget-9c0e83c3a93fb6e7a0ef">{"x":{"options":{"crs":{"crsClass":"L.CRS.EPSG3857","code":null,"proj4def":null,"projectedBounds":null,"options":{}}},"calls":[{"method":"addTiles","args":["https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",null,null,{"minZoom":0,"maxZoom":18,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":1,"detectRetina":false,"attribution":"&copy; <a href=\"https://openstreetmap.org/copyright/\">OpenStreetMap<\/a>,  <a href=\"https://opendatacommons.org/licenses/odbl/\">ODbL<\/a>"}]},{"method":"addMarkers","args":[-36.852,174.768,null,null,null,{"interactive":true,"draggable":false,"keyboard":true,"title":"","alt":"","zIndexOffset":0,"opacity":1,"riseOnHover":false,"riseOffset":250},"The birthplace of R",null,null,null,null,{"interactive":false,"permanent":false,"direction":"auto","opacity":1,"offset":[0,0],"textsize":"10px","textOnly":false,"className":"","sticky":true},null]}],"limits":{"lat":[-36.852,-36.852],"lng":[174.768,174.768]}},"evals":[],"jsHooks":[]}</script>
+<div class="leaflet html-widget html-fill-item" id="htmlwidget-fc94cfe1c3195ad2b04b" style="width:960px;height:480px;"></div>
+<script type="application/json" data-for="htmlwidget-fc94cfe1c3195ad2b04b">{"x":{"options":{"crs":{"crsClass":"L.CRS.EPSG3857","code":null,"proj4def":null,"projectedBounds":null,"options":{}}},"calls":[{"method":"addTiles","args":["https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",null,null,{"minZoom":0,"maxZoom":18,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":1,"detectRetina":false,"attribution":"&copy; <a href=\"https://openstreetmap.org/copyright/\">OpenStreetMap<\/a>,  <a href=\"https://opendatacommons.org/licenses/odbl/\">ODbL<\/a>"}]},{"method":"addMarkers","args":[-36.852,174.768,null,null,null,{"interactive":true,"draggable":false,"keyboard":true,"title":"","alt":"","zIndexOffset":0,"opacity":1,"riseOnHover":false,"riseOffset":250},"The birthplace of R",null,null,null,null,{"interactive":false,"permanent":false,"direction":"auto","opacity":1,"offset":[0,0],"textsize":"10px","textOnly":false,"className":"","sticky":true},null]}],"limits":{"lat":[-36.852,-36.852],"lng":[174.768,174.768]}},"evals":[],"jsHooks":[]}</script>
 </div>
 </div>
 <div class="footer">
@@ -2218,7 +2218,7 @@ a_{21}&amp; =b_{21}&amp;
 </div>
 <div class="quarto-auto-generated-content">
 <div class="footer footer-default">
-<p>© Gianluca Baio (UCL) &nbsp; | &nbsp; <a href="https://twitter.com/giabaio" title="Follow me on X"><i class="fa-brands fa-x-twitter" aria-label="x-twitter"></i></a> &nbsp; <a href="https://mas.to/@gianlubaio" title="Follow me on Mastodon"><i class="fa-brands fa-mastodon" aria-label="mastodon"></i></a> &nbsp; <a href="https://github.com/giabaio" title="Check out my repos"><i class="fa-brands fa-github" aria-label="github"></i></a> &nbsp; <a href="mailto:g.baio@ucl.ac.uk" title="Email me"><i class="fa-solid fa-envelope" aria-label="envelope"></i></a> &nbsp; <a href="https://gianluca.statistica.it" title="Visit my website"><i class="fa-brands fa-firefox" aria-label="firefox"></i></a> &nbsp; | &nbsp; A short title &nbsp; | &nbsp; A shorter title of the conference &nbsp; | &nbsp; 26 Mar 2024 </p>
+<p>© Gianluca Baio (UCL) &nbsp; | &nbsp; <a href="https://twitter.com/giabaio" title="Follow me on X"><i class="fa-brands fa-x-twitter" aria-label="x-twitter"></i></a> &nbsp; <a href="https://mas.to/@gianlubaio" title="Follow me on Mastodon"><i class="fa-brands fa-mastodon" aria-label="mastodon"></i></a> &nbsp; <a href="https://github.com/giabaio" title="Check out my repos"><i class="fa-brands fa-github" aria-label="github"></i></a> &nbsp; <a href="mailto:g.baio@ucl.ac.uk" title="Email me"><i class="fa-solid fa-envelope" aria-label="envelope"></i></a> &nbsp; <a href="https://gianluca.statistica.it" title="Visit my website"><i class="fa-brands fa-firefox" aria-label="firefox"></i></a> &nbsp; | &nbsp; A short title &nbsp; | &nbsp; A shorter title of the conference &nbsp; | &nbsp; 27 Mar 2024 </p>
 </div>
 </div>
 </section>
@@ -2659,7 +2659,7 @@ a_{21}&amp; =b_{21}&amp;
       }
     });
     </script>
-    <script>var lightboxQuarto = GLightbox({"loop":false,"openEffect":"zoom","descPosition":"bottom","closeEffect":"zoom","selector":".lightbox"});
+    <script>var lightboxQuarto = GLightbox({"descPosition":"bottom","selector":".lightbox","loop":false,"openEffect":"zoom","closeEffect":"zoom"});
     window.onload = () => {
       lightboxQuarto.on('slide_before_load', (data) => {
         const { slideIndex, slideNode, slideConfig, player, trigger } = data;
