Move some the footer in the main yml so that's easier to modify!

--- a/inst/quarto/gb-slides.html
+++ b/inst/quarto/gb-slides.html
@@ -281,7 +281,7 @@
 
 <br>
 
-<p style="margin-top:10px;" class="date-conference">17 January 2026</p>
+<p style="margin-top:10px;" class="date-conference">18 January 2026</p>
 
 <p style="margin:0px;" class="date-conference">The name of the session</p>
        <p style="margin:0px;" class="date-conference">The name of the conference, Where it is</p>
@@ -375,7 +375,7 @@ Can add vertical space using `fragments`
     </div>
   <div class="quarto-auto-generated-content" style="display: none;">
 <div class="footer footer-default">
-<p>© Gianluca Baio (UCL) &nbsp; | &nbsp; <a href="https://www.linkedin.com/in/gianluca-baio/" title="Follow me on LinkedIn"><i class="fa-brands fa-linkedin" aria-label="linkedin"></i></a> &nbsp; <a href="https://mas.to/@gianlubaio" title="Follow me on Mastodon"><i class="fa-brands fa-mastodon" aria-label="mastodon"></i></a> &nbsp; <a href="https://github.com/giabaio" title="Check out my repos"><i class="fa-brands fa-github" aria-label="github"></i></a> &nbsp; <a href="mailto:g.baio@ucl.ac.uk" title="Email me"><i class="fa-solid fa-envelope" aria-label="envelope"></i></a> &nbsp; <a href="https://gianluca.statistica.it" title="Visit my website"><i class="fa-brands fa-firefox" aria-label="firefox"></i></a> &nbsp; | &nbsp; A short title &nbsp; | &nbsp; A shorter title of the conference &nbsp; | &nbsp; 17 Jan 2026 <!-- [](https://twitter.com/giabaio){title='Follow me on X'} &nbsp; --></p>
+<p>© Gianluca Baio (UCL) &nbsp; | &nbsp; <a href="https://www.linkedin.com/in/gianluca-baio/" title="Follow me on LinkedIn"><i class="fa-brands fa-linkedin" aria-label="linkedin"></i></a> &nbsp; <a href="https://mas.to/@gianlubaio" title="Follow me on Mastodon"><i class="fa-brands fa-mastodon" aria-label="mastodon"></i></a> &nbsp; <a href="https://github.com/giabaio" title="Check out my repos"><i class="fa-brands fa-github" aria-label="github"></i></a> &nbsp; <a href="mailto:g.baio@ucl.ac.uk" title="Email me"><i class="fa-solid fa-envelope" aria-label="envelope"></i></a> &nbsp; <a href="https://gianluca.statistica.it" title="Visit my website"><i class="fa-brands fa-firefox" aria-label="firefox"></i></a> &nbsp; | &nbsp; A short title &nbsp; | &nbsp; A shorter title of the conference &nbsp; | &nbsp; 18 Jan 2026 </p>
 </div>
 </div></div>
 
