Plays with title-slide for UCL and fix pt for all fonts

--- a/inst/quarto/_extensions/ucl/title-slide.html
+++ b/inst/quarto/_extensions/ucl/title-slide.html
@@ -8,7 +8,7 @@ $endif$
 <br>
 
 $for(author)$
-<p style="margin:0px 0px .3em 0px;" class="author">$author$</p>
+<p style="margin:6vh 0px .3em 0px;" class="author">$author$</p>
 $endfor$
 $for(email)$
 <p style="margin:5px;" class="mail-websites">$email.icon$ $email.text$</p>
@@ -24,7 +24,7 @@ $endfor$
 
 <br>
 
-<p style="margin-top:10px;" class="date-conference">$date-as-string$</p>
+<p style="margin-top:20px;" class="date-conference">$date-as-string$</p>
 
 $if(conference.session)$
 <p style="margin:0px;" class="date-conference">$conference.session$</p>
@@ -40,7 +40,7 @@ $endif$
 <br>
 
 $for(institute)$
-<p style="margin:0px;" class="date-conference">$institute.uni$</p>
+<p style="margin-top: 6vh;" class="date-conference">$institute.uni$</p>
 $endfor$
 
 
@@ -56,7 +56,7 @@ $if(postit.social-media)$
 <p><span class="postit2">Follow our departmental social media accounts <a href="url=%22https://twitter.com/stats_ucl" style="color: #000000;" title="Follow us on X"><i class="fa-brands fa-x-twitter" aria-label="x-twitter"></i></a> <a href="https://www.linkedin.com/in/statistical-science-ucl-906b9a201" style="color: #0A66C2;" title="Follow us on LinkedIn"><i class="fa-brands fa-linkedin" aria-label="linkedin"></i></a> <a href="https://www.instagram.com/ucl.stats/" style="color: #8a3ab9;" title="Follow us on Instagram"><i class="fa-brands fa-instagram" aria-label="instagram"></i></a> + magazine <a href="https://sample-space.org/" style="color: #434252;" title="Read our online magazine">“Sample Space”</a></span></p>
 $endif$
 
-<p><span class="logo-stats"></span></p>
+<p style="margin-top: 2vh;"><span class="logo-stats"></span></p>
 
 </section>
 
