--- a/inst/quarto/gb-slides.html
+++ b/inst/quarto/gb-slides.html
@@ -100,7 +100,7 @@
     code span.vs { color: #20794d; } /* VerbatimString */
     code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   </style>
-  <link rel="stylesheet" href="gb-slides_files/libs/revealjs/dist/theme/quarto-7896371307f8b6cf422289866c75a1e7.css">
+  <link rel="stylesheet" href="gb-slides_files/libs/revealjs/dist/theme/quarto-811be07e721610adf80437d334a7436c.css">
   <link rel="stylesheet" href="_extensions/ucl/fonts.css">
   <link href="gb-slides_files/libs/revealjs/plugin/quarto-line-highlight/line-highlight.css" rel="stylesheet">
   <link href="gb-slides_files/libs/revealjs/plugin/reveal-menu/menu.css" rel="stylesheet">
@@ -269,7 +269,7 @@
 
 <br>
 
-<p style="margin:0px 0px .3em 0px;" class="author"><strong>Gianluca Baio</strong></p>
+<p style="margin:6vh 0px .3em 0px;" class="author"><strong>Gianluca Baio</strong></p>
 <p style="margin:5px;" class="mail-websites"><svg aria-hidden="true" role="img" viewbox="0 0 512 512" style="height:0.8em;width:0.8em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:#00acee;overflow:visible;position:relative;"><path d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48H48zM0 176V384c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V176L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z"></path></svg> <a href="mailto:g.baio@ucl.ac.uk">g.baio@ucl.ac.uk</a></p>
 <p style="margin:0px 15px 0px 15px;" class="mail-websites"><svg aria-hidden="true" role="img" viewbox="0 0 512 512" style="height:0.8em;width:0.8em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:#B933E1;overflow:visible;position:relative;"><path d="M503.52,241.48c-.12-1.56-.24-3.12-.24-4.68v-.12l-.36-4.68v-.12a245.86,245.86,0,0,0-7.32-41.15c0-.12,0-.12-.12-.24l-1.08-4c-.12-.24-.12-.48-.24-.6-.36-1.2-.72-2.52-1.08-3.72-.12-.24-.12-.6-.24-.84-.36-1.2-.72-2.4-1.08-3.48-.12-.36-.24-.6-.36-1-.36-1.2-.72-2.28-1.2-3.48l-.36-1.08c-.36-1.08-.84-2.28-1.2-3.36a8.27,8.27,0,0,0-.36-1c-.48-1.08-.84-2.28-1.32-3.36-.12-.24-.24-.6-.36-.84-.48-1.2-1-2.28-1.44-3.48,0-.12-.12-.24-.12-.36-1.56-3.84-3.24-7.68-5-11.4l-.36-.72c-.48-1-.84-1.8-1.32-2.64-.24-.48-.48-1.08-.72-1.56-.36-.84-.84-1.56-1.2-2.4-.36-.6-.6-1.2-1-1.8s-.84-1.44-1.2-2.28c-.36-.6-.72-1.32-1.08-1.92s-.84-1.44-1.2-2.16a18.07,18.07,0,0,0-1.2-2c-.36-.72-.84-1.32-1.2-2s-.84-1.32-1.2-2-.84-1.32-1.2-1.92-.84-1.44-1.32-2.16a15.63,15.63,0,0,0-1.2-1.8L463.2,119a15.63,15.63,0,0,0-1.2-1.8c-.48-.72-1.08-1.56-1.56-2.28-.36-.48-.72-1.08-1.08-1.56l-1.8-2.52c-.36-.48-.6-.84-1-1.32-1-1.32-1.8-2.52-2.76-3.72a248.76,248.76,0,0,0-23.51-26.64A186.82,186.82,0,0,0,412,62.46c-4-3.48-8.16-6.72-12.48-9.84a162.49,162.49,0,0,0-24.6-15.12c-2.4-1.32-4.8-2.52-7.2-3.72a254,254,0,0,0-55.43-19.56c-1.92-.36-3.84-.84-5.64-1.2h-.12c-1-.12-1.8-.36-2.76-.48a236.35,236.35,0,0,0-38-4H255.14a234.62,234.62,0,0,0-45.48,5c-33.59,7.08-63.23,21.24-82.91,39-1.08,1-1.92,1.68-2.4,2.16l-.48.48H124l-.12.12.12-.12a.12.12,0,0,0,.12-.12l-.12.12a.42.42,0,0,1,.24-.12c14.64-8.76,34.92-16,49.44-19.56l5.88-1.44c.36-.12.84-.12,1.2-.24,1.68-.36,3.36-.72,5.16-1.08.24,0,.6-.12.84-.12C250.94,20.94,319.34,40.14,367,85.61a171.49,171.49,0,0,1,26.88,32.76c30.36,49.2,27.48,111.11,3.84,147.59-34.44,53-111.35,71.27-159,24.84a84.19,84.19,0,0,1-25.56-59,74.05,74.05,0,0,1,6.24-31c1.68-3.84,13.08-25.67,18.24-24.59-13.08-2.76-37.55,2.64-54.71,28.19-15.36,22.92-14.52,58.2-5,83.28a132.85,132.85,0,0,1-12.12-39.24c-12.24-82.55,43.31-153,94.31-170.51-27.48-24-96.47-22.31-147.71,15.36-29.88,22-51.23,53.16-62.51,90.36,1.68-20.88,9.6-52.08,25.8-83.88-17.16,8.88-39,37-49.8,62.88-15.6,37.43-21,82.19-16.08,124.79.36,3.24.72,6.36,1.08,9.6,19.92,117.11,122,206.38,244.78,206.38C392.77,503.42,504,392.19,504,255,503.88,250.48,503.76,245.92,503.52,241.48Z"></path></svg> <a href="https://gianluca.statistica.it">https://gianluca.statistica.it</a></p>
 <p style="margin:0px 15px 0px 15px;" class="mail-websites"><svg aria-hidden="true" role="img" viewbox="0 0 512 512" style="height:0.8em;width:0.8em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:#EA7600;overflow:visible;position:relative;"><path d="M503.52,241.48c-.12-1.56-.24-3.12-.24-4.68v-.12l-.36-4.68v-.12a245.86,245.86,0,0,0-7.32-41.15c0-.12,0-.12-.12-.24l-1.08-4c-.12-.24-.12-.48-.24-.6-.36-1.2-.72-2.52-1.08-3.72-.12-.24-.12-.6-.24-.84-.36-1.2-.72-2.4-1.08-3.48-.12-.36-.24-.6-.36-1-.36-1.2-.72-2.28-1.2-3.48l-.36-1.08c-.36-1.08-.84-2.28-1.2-3.36a8.27,8.27,0,0,0-.36-1c-.48-1.08-.84-2.28-1.32-3.36-.12-.24-.24-.6-.36-.84-.48-1.2-1-2.28-1.44-3.48,0-.12-.12-.24-.12-.36-1.56-3.84-3.24-7.68-5-11.4l-.36-.72c-.48-1-.84-1.8-1.32-2.64-.24-.48-.48-1.08-.72-1.56-.36-.84-.84-1.56-1.2-2.4-.36-.6-.6-1.2-1-1.8s-.84-1.44-1.2-2.28c-.36-.6-.72-1.32-1.08-1.92s-.84-1.44-1.2-2.16a18.07,18.07,0,0,0-1.2-2c-.36-.72-.84-1.32-1.2-2s-.84-1.32-1.2-2-.84-1.32-1.2-1.92-.84-1.44-1.32-2.16a15.63,15.63,0,0,0-1.2-1.8L463.2,119a15.63,15.63,0,0,0-1.2-1.8c-.48-.72-1.08-1.56-1.56-2.28-.36-.48-.72-1.08-1.08-1.56l-1.8-2.52c-.36-.48-.6-.84-1-1.32-1-1.32-1.8-2.52-2.76-3.72a248.76,248.76,0,0,0-23.51-26.64A186.82,186.82,0,0,0,412,62.46c-4-3.48-8.16-6.72-12.48-9.84a162.49,162.49,0,0,0-24.6-15.12c-2.4-1.32-4.8-2.52-7.2-3.72a254,254,0,0,0-55.43-19.56c-1.92-.36-3.84-.84-5.64-1.2h-.12c-1-.12-1.8-.36-2.76-.48a236.35,236.35,0,0,0-38-4H255.14a234.62,234.62,0,0,0-45.48,5c-33.59,7.08-63.23,21.24-82.91,39-1.08,1-1.92,1.68-2.4,2.16l-.48.48H124l-.12.12.12-.12a.12.12,0,0,0,.12-.12l-.12.12a.42.42,0,0,1,.24-.12c14.64-8.76,34.92-16,49.44-19.56l5.88-1.44c.36-.12.84-.12,1.2-.24,1.68-.36,3.36-.72,5.16-1.08.24,0,.6-.12.84-.12C250.94,20.94,319.34,40.14,367,85.61a171.49,171.49,0,0,1,26.88,32.76c30.36,49.2,27.48,111.11,3.84,147.59-34.44,53-111.35,71.27-159,24.84a84.19,84.19,0,0,1-25.56-59,74.05,74.05,0,0,1,6.24-31c1.68-3.84,13.08-25.67,18.24-24.59-13.08-2.76-37.55,2.64-54.71,28.19-15.36,22.92-14.52,58.2-5,83.28a132.85,132.85,0,0,1-12.12-39.24c-12.24-82.55,43.31-153,94.31-170.51-27.48-24-96.47-22.31-147.71,15.36-29.88,22-51.23,53.16-62.51,90.36,1.68-20.88,9.6-52.08,25.8-83.88-17.16,8.88-39,37-49.8,62.88-15.6,37.43-21,82.19-16.08,124.79.36,3.24.72,6.36,1.08,9.6,19.92,117.11,122,206.38,244.78,206.38C392.77,503.42,504,392.19,504,255,503.88,250.48,503.76,245.92,503.52,241.48Z"></path></svg> <a href="https://egon.stats.ucl.ac.uk/research/statistics-health-economics">https://egon.stats.ucl.ac.uk/research/statistics-health-economics</a></p>
@@ -281,14 +281,14 @@
 
 <br>
 
-<p style="margin-top:10px;" class="date-conference">18 January 2026</p>
+<p style="margin-top:20px;" class="date-conference">19 January 2026</p>
 
 <p style="margin:0px;" class="date-conference">The name of the session</p>
        <p style="margin:0px;" class="date-conference">The name of the conference, Where it is</p>
   
 <br>
 
-<p style="margin:0px;" class="date-conference">Department of Statistical Science &nbsp; | &nbsp; University College London</p>
+<p style="margin-top: 6vh;" class="date-conference">Department of Statistical Science &nbsp; | &nbsp; University College London</p>
 
 
 
@@ -296,7 +296,7 @@
 
 <p><span class="postit2">Follow our departmental social media accounts <a href="url=%22https://twitter.com/stats_ucl" style="color: #000000;" title="Follow us on X"><i class="fa-brands fa-x-twitter" aria-label="x-twitter"></i></a> <a href="https://www.linkedin.com/in/statistical-science-ucl-906b9a201" style="color: #0A66C2;" title="Follow us on LinkedIn"><i class="fa-brands fa-linkedin" aria-label="linkedin"></i></a> <a href="https://www.instagram.com/ucl.stats/" style="color: #8a3ab9;" title="Follow us on Instagram"><i class="fa-brands fa-instagram" aria-label="instagram"></i></a> + magazine <a href="https://sample-space.org/" style="color: #434252;" title="Read our online magazine">“Sample Space”</a></span></p>
 
-<p><span class="logo-stats"></span></p>
+<p style="margin-top: 2vh;"><span class="logo-stats"></span></p>
 
 </section>
 
@@ -318,7 +318,7 @@
 <li>Which is sometimes useful…</li>
 </ul></li>
 </ul>
-<p>…and much more</p>
+<p>…and much more <em>you suck!</em></p>
 </section>
 <section class="slide level2">
 
@@ -375,7 +375,7 @@ Can add vertical space using `fragments`
     </div>
   <div class="quarto-auto-generated-content" style="display: none;">
 <div class="footer footer-default">
-<p>© Gianluca Baio (UCL) &nbsp; | &nbsp; <a href="https://www.linkedin.com/in/gianluca-baio/" title="Follow me on LinkedIn"><i class="fa-brands fa-linkedin" aria-label="linkedin"></i></a> &nbsp; <a href="https://mas.to/@gianlubaio" title="Follow me on Mastodon"><i class="fa-brands fa-mastodon" aria-label="mastodon"></i></a> &nbsp; <a href="https://github.com/giabaio" title="Check out my repos"><i class="fa-brands fa-github" aria-label="github"></i></a> &nbsp; <a href="mailto:g.baio@ucl.ac.uk" title="Email me"><i class="fa-solid fa-envelope" aria-label="envelope"></i></a> &nbsp; <a href="https://gianluca.statistica.it" title="Visit my website"><i class="fa-brands fa-firefox" aria-label="firefox"></i></a> &nbsp; | &nbsp; A short title &nbsp; | &nbsp; A shorter title of the conference &nbsp; | &nbsp; 18 Jan 2026 </p>
+<p>© Gianluca Baio (UCL) &nbsp; | &nbsp; <a href="https://www.linkedin.com/in/gianluca-baio/" title="Follow me on LinkedIn"><i class="fa-brands fa-linkedin" aria-label="linkedin"></i></a> &nbsp; <a href="https://mas.to/@gianlubaio" title="Follow me on Mastodon"><i class="fa-brands fa-mastodon" aria-label="mastodon"></i></a> &nbsp; <a href="https://github.com/giabaio" title="Check out my repos"><i class="fa-brands fa-github" aria-label="github"></i></a> &nbsp; <a href="mailto:g.baio@ucl.ac.uk" title="Email me"><i class="fa-solid fa-envelope" aria-label="envelope"></i></a> &nbsp; <a href="https://gianluca.statistica.it" title="Visit my website"><i class="fa-brands fa-firefox" aria-label="firefox"></i></a> &nbsp; | &nbsp; A short title &nbsp; | &nbsp; A shorter title of the conference &nbsp; | &nbsp; 19 Jan 2026 </p>
 </div>
 </div></div>
 
