--- a/inst/quarto/gb-slides.html
+++ b/inst/quarto/gb-slides.html
@@ -100,7 +100,7 @@
     code span.vs { color: #20794d; } /* VerbatimString */
     code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   </style>
-  <link rel="stylesheet" href="gb-slides_files/libs/revealjs/dist/theme/quarto-40ca1cd93c0ec2eb65fc187031198341.css">
+  <link rel="stylesheet" href="gb-slides_files/libs/revealjs/dist/theme/quarto-e3a33a00277586892148f7dc35724170.css">
   <link rel="stylesheet" href="_extensions/ucl/fonts.css">
   <link href="gb-slides_files/libs/revealjs/plugin/quarto-line-highlight/line-highlight.css" rel="stylesheet">
   <link href="gb-slides_files/libs/revealjs/plugin/reveal-menu/menu.css" rel="stylesheet">
@@ -260,9 +260,9 @@
   </script>
   <script type="module" src="gb-slides_files/libs/quarto-ojs/quarto-ojs-runtime.js"></script>
   <link href="gb-slides_files/libs/quarto-ojs/quarto-ojs.css" rel="stylesheet">
-  <link href="gb-slides_files/libs/htmltools-fill-0.5.9.9000/fill.css" rel="stylesheet">
+  <link href="gb-slides_files/libs/htmltools-fill-0.5.9/fill.css" rel="stylesheet">
   <script src="gb-slides_files/libs/htmlwidgets-1.6.4/htmlwidgets.js"></script>
-  <script src="gb-slides_files/libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
+  <script src="gb-slides_files/libs/jquery-3.6.1/jquery-3.6.1.min.js"></script>
   <link href="gb-slides_files/libs/leaflet-1.3.1/leaflet.css" rel="stylesheet">
   <script src="gb-slides_files/libs/leaflet-1.3.1/leaflet.js"></script>
   <link href="gb-slides_files/libs/leafletfix-1.0.0/leafletfix.css" rel="stylesheet">
@@ -271,7 +271,7 @@
   <link href="gb-slides_files/libs/rstudio_leaflet-1.3.1/rstudio_leaflet.css" rel="stylesheet">
   <script src="gb-slides_files/libs/leaflet-binding-2.2.3/leaflet.js"></script>
   <script type="ojs-define">
-  {"contents":[{"name":"actors","value":{"x":[0.5659,-0.4093,0.9894,0.5487,0.0513,0.456,-0.5401,-0.4552,-0.2877,-0.5159,-1.5418,-0.8459,-1.1509,1.1976,-0.7147,-1.5142,0.3526,-1.1406,-0.6106,0.1452,0.8512,-0.6505,0.7858,0.9835,0.0262,0.2571,0.1476,1.8478,0.7378,-0.7707,1.8665,0.2202,1.795,0.1629,-1.2726,0.3866,-0.0237,-0.7161,0.9264,-1.2443,-1.1552,0.5999,-0.2475,2.7711,0.8747,0.0741,0.3983,0.1536,-0.154,0.0926,0.8444,1.1362,0.0138,1.2698,1.2331,-0.18,0.922,-0.3478,-0.1194,-0.33,-0.8663,-0.7178,0.9403,-0.5964,0.4879,0.7058,-1.6243,0.1677,-2.3316,0.1011,1.117,-0.7731,-0.8522,0.9994,-0.9449,-0.4477,0.7096,-0.2994,-0.9129,0.251,-0.6281,-1.3791,-0.8865,-0.9936,-0.0129,-0.2934,0.5214,-1.1361,0.3552,-0.891,0.8652,1.1501,-0.5988,-1.1155,-2.179,-1.1859,-0.7893,0.9357,0.7796,0.715],"y":[0.5168,0.0017,-1.0723,1.0618,-0.4099,0.6241,-0.6714,0.1768,2.5164,-2.3342,1.2423,0.2983,1.2364,0.3631,1.1226,0.272,-1.3391,0.9255,-0.4308,-0.6094,-0.2459,0.4944,1.8518,-0.5929,-1.1139,0.3509,-1.7032,0.1639,-0.5258,1.4209,1.2172,1.0128,2.4311,-1.0291,-0.2203,-0.2435,0.1182,2.1129,2.1337,0.1025,1.5127,-0.9584,-1.418,0.8274,0.7211,-0.7826,0.0314,1.6235,1.0671,0.1224,1.2131,-0.1396,-0.3874,-0.5209,-1.7903,-0.6155,1.9526,0.5118,1.1952,-1.0353,-1.8637,0.4871,0.7429,1.6679,-0.2174,-1.2679,-1.7609,-0.1932,-0.0989,-1.8829,0.5931,1.3675,0.1821,1.3827,0.4059,0.1332,-0.4789,-0.3508,-0.8113,-1.4679,-0.3201,1.0738,-1.135,-0.788,1.7701,-0.7268,-1.8923,0.477,0.751,0.1497,1.2896,0.3099,-0.1273,-1.4214,-0.3692,-1.1607,0.9437,-0.9898,1.6676,-0.4765]}}]}
+  {"contents":[{"name":"actors","value":{"x":[-0.4711,-2.005,-0.4322,-0.049,0.7875,0.3403,1.554,1.9744,-0.1211,2.0054,-0.4886,-0.9355,-2.7567,-1.8905,-0.5094,-1.626,-0.6127,0.7606,0.6201,-1.9738,-0.064,-1.2195,-1.2671,-0.4446,1.0885,0.3377,2.6522,0.4385,-0.8672,0.0148,-0.4271,0.2719,-0.2548,-1.0069,0.1138,-0.4527,-0.6271,-0.8481,0.4611,0.7495,-1.1202,-1.2107,-1.1308,0.0717,-1.9844,-0.1109,-0.677,1.1287,-0.345,-0.1899,0.2818,3.1041,0.338,1.6258,0.4856,0.469,-1.2158,1.9783,1.184,0.3404,1.2076,-0.0486,1.3295,-0.7992,-0.0758,0.3088,0.771,0.9998,0.3551,0.5695,-0.8671,1.6481,0.414,1.23,-0.6619,-1.259,-0.3273,-0.7752,0.994,1.5194,-1.4752,1.4412,0.5489,-0.3089,0.7136,1.9034,-0.1925,0.4081,0.717,0.7379,0.2766,-0.9127,0.0663,0.1059,0.0527,0.664,0.9716,-0.6139,1.5023,-2.1172],"y":[-0.1189,-1.736,-1.1008,0.4724,1.432,1.317,-0.348,1.1075,1.2552,-0.4287,-0.2681,0.1737,-2.0916,1.2247,0.0769,1.0682,1.0306,-0.7949,-0.0614,-1.536,-1.2613,1.7789,-0.6535,0.6607,-2.1999,0.8991,1.2657,-0.6996,-0.2956,-0.2751,0.7616,2.0152,-0.4836,1.2623,0.1394,-0.9275,0.1823,-0.1475,-1.2985,-1.4481,2.1398,-0.2627,1.6168,-0.4853,-0.9024,0.0969,0.2992,0.1283,-0.6889,0.034,-0.5146,-0.4662,-0.4904,0.3024,2.4006,-0.6305,0.7523,-1.1264,-0.3966,1.2964,-0.8989,-0.4161,1.2099,-0.3636,1.012,-1.4646,2.5127,-0.8689,0.2865,-0.527,0.1657,1.2775,0.9701,0.8987,-1.9263,-0.0316,0.8043,-0.7689,1.0067,1.4088,0.4225,-0.2938,-0.3874,-0.0162,0.6634,-0.393,-1.0542,1.7009,0.583,0.0186,-0.8453,-0.7202,0.1902,0.5487,-0.3642,1.7101,0.95,-1.3732,1.7035,0.2985]}}]}
   </script>
 </head>
 <body class="quarto-light">
@@ -1847,8 +1847,8 @@ a_{21}&amp; =b_{21}&amp;
 <p>Include Jupyter widgets and htmlwidgets in your presentations</p>
 <div class="cell" data-layout-align="center">
 <div class="cell-output-display">
-<div class="leaflet html-widget html-fill-item" id="htmlwidget-d93455eab99359f23da0" style="width:55%;height:480px;"></div>
-<script type="application/json" data-for="htmlwidget-d93455eab99359f23da0">{"x":{"options":{"crs":{"crsClass":"L.CRS.EPSG3857","code":null,"proj4def":null,"projectedBounds":null,"options":{}}},"calls":[{"method":"addTiles","args":["https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",null,null,{"minZoom":0,"maxZoom":18,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":1,"detectRetina":false,"attribution":"&copy; <a href=\"https://openstreetmap.org/copyright/\">OpenStreetMap<\/a>,  <a href=\"https://opendatacommons.org/licenses/odbl/\">ODbL<\/a>"}]},{"method":"addMarkers","args":[-36.852,174.768,null,null,null,{"interactive":true,"draggable":false,"keyboard":true,"title":"","alt":"","zIndexOffset":0,"opacity":1,"riseOnHover":false,"riseOffset":250},"The birthplace of R",null,null,null,null,{"interactive":false,"permanent":false,"direction":"auto","opacity":1,"offset":[0,0],"textsize":"10px","textOnly":false,"className":"","sticky":true},null]}],"limits":{"lat":[-36.852,-36.852],"lng":[174.768,174.768]}},"evals":[],"jsHooks":[]}</script>
+<div class="leaflet html-widget html-fill-item" id="htmlwidget-9c41c1c3339ffec9d643" style="width:55%;height:480px;"></div>
+<script type="application/json" data-for="htmlwidget-9c41c1c3339ffec9d643">{"x":{"options":{"crs":{"crsClass":"L.CRS.EPSG3857","code":null,"proj4def":null,"projectedBounds":null,"options":{}}},"calls":[{"method":"addTiles","args":["https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",null,null,{"minZoom":0,"maxZoom":18,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":1,"detectRetina":false,"attribution":"&copy; <a href=\"https://openstreetmap.org/copyright/\">OpenStreetMap<\/a>,  <a href=\"https://opendatacommons.org/licenses/odbl/\">ODbL<\/a>"}]},{"method":"addMarkers","args":[-36.852,174.768,null,null,null,{"interactive":true,"draggable":false,"keyboard":true,"title":"","alt":"","zIndexOffset":0,"opacity":1,"riseOnHover":false,"riseOffset":250},"The birthplace of R",null,null,null,null,{"interactive":false,"permanent":false,"direction":"auto","opacity":1,"offset":[0,0],"textsize":"10px","textOnly":false,"className":"","sticky":true},null]}],"limits":{"lat":[-36.852,-36.852],"lng":[174.768,174.768]}},"evals":[],"jsHooks":[]}</script>
 </div>
 </div>
 <div class="footer">
