Update yml now the footer is a variable footer-content and the _extension.yml file inserts it

--- a/inst/quarto/_extensions/gb/title-slide.html
+++ b/inst/quarto/_extensions/gb/title-slide.html
@@ -8,7 +8,7 @@ $endif$
 <br>
 
 $for(author)$
-<p style="margin:0px 0px .8em 0px; font-family: Ubuntu; font-size: 1.2em;" class="author">$author$</p>
+<p style="margin:0px 0px .8em 0px; font-family: Ubuntu; font-size: 1.2em; font-weight: 600" class="author">$author$</p>
 $endfor$
 
 $for(institute)$
